1.2beta2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10768: PersistentObjectDatabaseSchemaTiein: Class prefix not
  reflected in definition file names.
- Fixed issue #10769: PersistentObjectDatabaseSchemaTiein: Generated
  getState() expects parameter.


1.2beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10113: Testing DatabaseSchema silently quits.
- Fixed issue #10115: Reserved keywords are not quoted when used as table
  or field names.
- Fixed issue #10286: Missing "throw new" before
  ezcBaseFilePermissionException.
- Fixed issue #10365: "true" and "false" are handled incorrectly while parsing
  schemas from XML files.
- Fixed issue #10398: Oracle tests of DatabaseSchema run into error.
- Fixed issue #10548: DatabaseSchema uses different sequence names for Oracle
  and PostgreSQL.
- Fixed issue #10630: Call-time pass-by-reference warning in Oracle handler.
- Implemented feature #9584: Switch for overwriting files.
  (PersistentObjectDatabaseSchemaTiein)
- Implemented feature #9874: ezcDbSchema[DB]Reader custom table schema class.
- Implemented feature #8418: Generate class files as well.
  (PersistentObjectDatabaseSchemaTiein)


1.1 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added support for Oracle.
- Fixed issue #8499: PersistentObjectDatabaseSchemaTiein rungenerator.php
  overwrites files without warning.
- Fixed issue #9465: Fixed data type mapping. Based on a patch by Friedel
  Hill.
- Fixed issue #9489: Check whether the PersistentObject and
  PersistentObjectDatabaseSchemaTiein tutorials are interlinked.
- Fixed issue #9541: Tutorial introduction incorrect.
- Fixed issue #9819: Let all components deal with the ezcBaseAutoloadException
  properly.
- Fixed SQL syntax issues when working with PostgreSQL 7.x.


1.1beta1 - Monday 20 November 2006