@@ -5,6 +5,8 @@
   reflected in definition file names.
 - Fixed issue #10769: PersistentObjectDatabaseSchemaTiein: Generated
   getState() expects parameter.
+- Fixed issue #10804: Adding auto increment to field fails with oracle and
+  sqlite.
 
 
 1.2beta1 - Monday 07 May 2007
